syntax = "proto3";

package pb;

option go_package = "/pb";

message LoginRequest {
    string user_account = 1;
    string user_password = 2;
}

message LoginResponse {
    string token = 1;
    string user_id = 2;
}
