syntax = "proto3";

package pb;

option go_package = "/pb";

message UserInfo {
    string id = 1;
    string user_name = 2;
    string user_account = 3;
    string description = 4;
    string avator = 5;
}

message CreateUserRequest {
	string user_name = 1;
    string user_account = 2;
    string password = 3;
}

message CreateUserResponse {}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    UserInfo user = 1;
}

message ListUserRequest {
    int64 limit = 1;
    int64 skip = 2;
    optional string filter = 3;
}

message ListUserResponse {
    repeated UserInfo users = 1;
}

message UpdateUserRequest {
    string id = 1;
    string user_name = 2;
    string description = 3;
    string avator = 4;
}

message UpdateUserResponse {}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}
